# harmonic-daw

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
app/: .eslintrc.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
app/src/main/: engineBridge.ts  index.ts  projectManager.ts
app/src/preload/: index.ts
app/src/renderer/: App.module.css  App.tsx  index.html  index.tsx
app/src/renderer/components/arrangement/: ArrangementView.module.css  ArrangementView.tsx  Playhead.tsx  Timeline.tsx
app/src/renderer/components/mixer/: MixerChannel.module.css  MixerChannel.tsx  MixerPanel.module.css  MixerPanel.tsx
app/src/renderer/components/piano-roll/: PianoRoll.module.css  PianoRoll.tsx
app/src/renderer/components/tracks/: ClipView.module.css  ClipView.tsx  TrackList.module.css  TrackList.tsx  TrackRow.module.css  TrackRow.tsx
app/src/renderer/components/transport/: TransportBar.module.css  TransportBar.tsx
app/src/renderer/engine/: useAudioSync.ts  webAudioEngine.ts
app/src/renderer/store/: projectStore.ts  transportStore.ts
app/src/renderer/styles/: globals.css
engine/: CMakeLists.txt  package.json
engine/include/audio/: AudioEngine.h  ProcessingGraph.h
engine/include/midi/: MidiEngine.h
engine/include/plugins/: PluginHost.h
engine/src/audio/: AudioDeviceManager.cpp  AudioEngine.cpp  ProcessingGraph.cpp  TrackProcessor.cpp
engine/src/ipc/: IpcBridge.cpp  NapiBinding.cpp
engine/src/midi/: MidiClock.cpp  MidiEngine.cpp  MidiInputCollector.cpp
engine/src/plugins/: PluginHost.cpp  PluginSandbox.cpp  PluginScanner.cpp
shared/: package.json  tsconfig.json
shared/src/: index.ts
shared/src/constants/: index.ts
shared/src/types/: audio.ts  ipc.ts  midi.ts  plugins.ts  project.ts
shared/src/utils/: beats.ts
